--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider: ^2.0.0
   url_launcher: ^6.0.0
+  internet_connection_checker: ^2.0.0
+  youtube_player_flutter: ^8.0.0
 
 
 dev_dependencies:
@@ -51,6 +53,11 @@ dev_dependencies:
   flutter_native_splash: ^2.4.1
   hive_generator: ^1.1.0
   build_runner: ^2.1.7
+  flutter_launcher_icons: "^0.14.1"
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/movies.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
